@@ -42,6 +42,10 @@ Saturday May 14th, 2016
 
     This is an important point to consider!
 
+    -----------
+
+    Added a bunch of extra logic for packet creates
+
 
 Friday May 13th, 2016
 =====================
